index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
                 <div class="input-row">
                     <div class="field">
-                        <label>MORPH SPEED: <span id="morphSpeedVal">2</span></label>
-                        <input type="range" id="morphSpeed" min="0.5" max="5" value="2" step="0.1">
+                        <label>MORPH 시간: <span id="morphDurationVal">2</span>초</label>
+                        <input type="range" id="morphDuration" min="0.5" max="10" value="2" step="0.5">
                     </div>
                 </div>
 
